--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,93 @@
-.nav-item {
+body {
+  font-family: 'Yeseva One', serif;
+  background-image: url("../images/photo-1629968417850-3505f5180761.jpg");
+  background-attachment: fixed;
+}
+
+.navbar {
+    position: fixed;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.626) !important;
+    background-size: cover;
+    z-index: 10;
+  }
+  .navbar-nav {
     margin-left: auto;
-}
+    margin-right: 0 !important;
+  }
+
+  
+  .navbar-brand img {
+    padding-right: 15px;
+    width: 80px;
+  }
+
+  .customNav a {
+    color: white !important;
+  }
+  #navbarNav a {
+    color: white;
+  }
+  .navbar-toggler {
+    color: white;
+  }
 
 
-.jumbotron img {
-    height: 200px;
-    margin-left: auto;
+  .jumbotron {
+    background-image: url("../images/web-design-2906159_1920.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: calc(100vh - 25px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .jumboCopy {
+    width: 70%;
+    min-width: 500px;
+    max-width: 700px;
+    color: white;
+    text-align: center;
+  }
+
+  .card {
+  margin: 2rem;
+  display: flex;
+  flex-direction: column;
 }
-.jumbotron {
-    background-color: rgba(0, 0, 0, 0.516);
-    color:white;
-}
-h1 {
-    margin: 0 auto;
+.card img {
+  padding: 1rem;
 }
 
-.card {
-    margin: 1rem;
+.about img {
+  height: 200px;
+  padding: 1rem;
+}
+.skills, .about {
+  margin: 1.5rem;
+}
+.about-skills {
+  background-color: rgba(0, 0, 0, 0.512);
+}
+.about h1, .about p {
+  color: white;
+}
+
+.footer {
+  display:flex;
+  height: 70px;
+  margin: auto;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.732);
+  color: white;
+}
+.footer a {
+  color: white;
+}
+.hand {
+  height: 400px;
+  margin-left: 200px;
 }
